# node-sword-interface

./: .gitignore  API.md  CMakeLists.txt  README.md  REPOSITORY_PARAMETER_USAGE.md  binding.cpp  binding.gyp  build_sword.sh  deploy_local.sh  ezra_sword_interface.cpp  ezra_sword_interface.hpp  file_system_helper.cpp  file_system_helper.hpp  get_sword_win32.bat  index.js  js_ezra_sword_interface.cpp  js_ezra_sword_interface.hpp  js_ezra_sword_interface_worker.hpp  main.cpp  napi_sword_helper.cpp  napi_sword_helper.hpp  node_sword_interface.cpp  node_sword_interface.hpp  node_sword_interface_worker.hpp  package.json  string_helper.cpp  string_helper.hpp  strongs_entry.cpp  strongs_entry.hpp  sword_facade.cpp  sword_facade.hpp  sword_icu.patch
.github/workflows/: build.yml
examples/: install_kjv.js  print_kjv_matthew.js
lib/: languages.json
locales.d/: bg-utf8.conf  da-utf8.conf  da.conf  hu-utf8.conf  locales.conf  ru-utf8.conf  ru_RU-utf8.conf  uk-utf8.conf  vi-utf8.conf
locales.d/alt/: zh_CN-CAT-utf8.conf
patch/: sword_globconf.patch  sword_mac.patch
scripts/: benchmark.js  build_sword.sh  cleanup_build_artifacts.js  cleanup_build_artifacts.sh  deploy_local.sh  get_sword_build_win32.js  get_sword_build_win32.ps1  get_sword_include_path.sh  get_sword_library.sh  get_sword_win32.bat  ios_framework_postbuild.sh  postinstall.js  release.sh  sword_locales_to_json.mjs
src/: api_lock.hpp  binding.cpp  file_system_helper.cpp  file_system_helper.hpp  install_module_worker.cpp  install_module_worker.hpp  main.cpp  module_helper.cpp  module_helper.hpp  module_search_worker.cpp  module_search_worker.hpp  napi_sword_helper.cpp  napi_sword_helper.hpp  node_sword_cli.cpp  node_sword_interface.cpp  node_sword_interface.hpp  node_sword_interface_worker.hpp  percentage_calc.hpp  repository_interface.hpp  string_helper.cpp  strongs_entry.cpp  strongs_entry.hpp  sword_facade.cpp  sword_facade.hpp  sword_status_reporter.cpp  sword_status_reporter.hpp  worker.hpp
src/napi_module/: api_lock.cpp  api_lock.hpp  binding.cpp  install_module_worker.cpp  install_module_worker.hpp  module_search_worker.cpp  module_search_worker.hpp  napi_sword_helper.cpp  napi_sword_helper.hpp  node_sword_interface.cpp  node_sword_interface.hpp  worker.hpp
src/sword_backend/: common_defs.hpp  dict_helper.cpp  dict_helper.hpp  file_system_helper.cpp  file_system_helper.hpp  module_helper.cpp  module_helper.hpp  module_installer.cpp  module_installer.hpp  module_search.cpp  module_search.hpp  module_store.cpp  module_store.hpp  mutex.cpp  mutex.hpp  percentage_calc.hpp  repository_interface.cpp  repository_interface.hpp  string_helper.cpp  string_helper.hpp  strongs_entry.cpp  strongs_entry.hpp  sword_facade.cpp  sword_facade.hpp  sword_status_reporter.cpp  sword_status_reporter.hpp  sword_translation_helper.hpp  text_processor.cpp  text_processor.hpp  verse.hpp
src/sword_backend/unzip/: unzip.c
test/: scripref_rendering.test.js  test.js  test_repository_parameter.js
